--- a/Rails/demo/app/views/welcome/index.html.erb
+++ b/Rails/demo/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Welcome Students</h1>
 <p><%= link_to 'Students Details', controller: 'students'%></p>
+<p><%= link_to 'Accounts', controller: 'accounts'%></p>
