active record callbacks

--- a/Rails/demo/app/views/accounts/show.html.erb
+++ b/Rails/demo/app/views/accounts/show.html.erb
@@ -7,10 +7,14 @@
 	<strong>Email:</strong>
 	<%=@account.email%>
 </p>
-
+<%#binding.pry%>
 <p>
 	<strong>Confirm Email:</strong>
 	<%=@account.email_confirmation%>
+</p>
+
+<p>
+	<strong>
 </p>
 
 
