--- a/Rails/demo/app/views/accounts/_form.html.erb
+++ b/Rails/demo/app/views/accounts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :account, url: accounts_path do |a| %>
+<%= form_for @account do |a| %>
 <%#binding.pry%>
 <% if @account.errors.any? %>
     <div id="error_explanation">
