--- a/Rails/twit3/app/views/posts/show.html.erb
+++ b/Rails/twit3/app/views/posts/show.html.erb
@@ -1,39 +1,29 @@
 <div class="container">
-
-  <% if current_user %>
-    <div class="col-sm-offset-1 col-sm-5">
-      <h1>Your Twitter Profile</h1>  
-      <div class="profile_image"><%= image_tag(@user.avatar.url(:medium), width: 200, height: 200) %><br></div>
-      <span class="name"><b><%= link_to @user.name, post_path(@user) %></b></span> @<%= @user.username %>
-      <p>
-        <%= @user.posts.size %> Tweets
-        <span class="spacing"><%= @user.followers.count%> Followers</span>
-        <span class="spacing"><%= @user.following.count%> Following</span>
-      </p>
-       <%= render partial: '/components/follow_button', locals: {user: @user}%>
+  <%= render '/components/sidebar_right'%>
+  <div class="col-sm-6">
+    <div class="body-card">
+      <div class="panel panel-danger">
+        <div class="panel-heading">
+          <h3><%= @user.name %>'s tweets</h3>
+        </div>
+        <div>
+          <ul class="List-group">
+            <li>
+              <b><%= link_to @user.name%></b>
+              <small>@<%= @user.name%>
+                <%= time_ago_in_words(@post.created_at) %>
+              </small>
+              <p><%= @post.content%></p>
+              <% if current_user.present? && @post.user_id == current_user.id %>
+              <%= link_to 'Delete', post_path(@post.id),
+              method: :delete,
+              data: {confirm: 'Are you sure?'} %>
+              <% end %>
+              <%= link_to 'Retweet', post_path%>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-  <% end %>
-   
-  <div class="col-sm-4">
-    <h1>Create a Tweet</h1>
-    <p>
-    <%= form_for @post do |f| %>
-        <%= f.text_area :content, class: 'form-control' %><br>
-        <%= f.submit "Tweet!", class: 'btn btn-primary' %>
-    <% end %>
-    </p><hr>
-
-    <h1>Your Tweets</h1>
-      <% @user.posts.each do |tweet| %>  
-        <span class="name"><b><%=link_to @user.name, post_path(@user) %></b></span> 
-        <small>@<%=  @user.username %> 
-        <span class="time"><%= time_ago_in_words(tweet.created_at) %></span></small>
-        <p> <%= tweet.content %> </p>  
-        <% if current_user.id == tweet.user_id%>
-          <%= link_to 'Delete', post_path(tweet), method: :delete, confirm: 'Are you sure?' %>
-        <% end %>
-        <%= link_to 'Retweet', post_path %><hr>   
-      <% end %>
-
   </div>
 </div>
