--- a/Rails/twit3/app/assets/stylesheets/application.css
+++ b/Rails/twit3/app/assets/stylesheets/application.css
@@ -77,6 +77,14 @@
   padding: 5px 5px 5px 5px;
   margin: 0px 0px 10px 0px;
 }
+.tweet-card{
+  background-color: white;
+  border: 1px solid #A3ABAB;
+  max-width: 430px;
+  border-radius: 5px;
+  padding: 5px 5px 5px 5px;
+  margin: 2px 0px 0px 50px;
+}
 
 .body-card{
   background-color: white;
