--- a/Rails/twit3/app/assets/stylesheets/application.css
+++ b/Rails/twit3/app/assets/stylesheets/application.css
@@ -18,6 +18,9 @@
 	color: blue;
 }
 
+body {
+  padding-top: 70px;
+}
 
 
 .round-image-50 {
@@ -67,6 +70,7 @@
 .table-custom{
     border: none;
     width: 100%;
+    margin-bottom: 0px;
 }
 
 .nav-card{
@@ -83,7 +87,7 @@
   max-width: 430px;
   border-radius: 5px;
   padding: 5px 5px 5px 5px;
-  margin: 2px 0px 0px 50px;
+  margin: 2px 0px 5px 50px;
 }
 
 .body-card{
@@ -106,5 +110,50 @@
 
 .btn-hover:hover{
   background-color: #38B0E3;
+}
+
+.list-style{
+  margin: 5px 5px 5px 0px;
+}
+
+.list-custom{
+  padding: 0px;
+}
+
+.header-title{
+  color: white;
+  font-size: 30px;
+}
+
+.header-title:hover{
+ color: white;
+ text-decoration: none;
+ text-shadow: 2px 2px 4px blue;
+}
+
+.header-text{
+  color: white;
+}
+
+.header-text:hover{
+  background-color: blue;
+}
+
+.margin-bottom-zero{
+  margin-bottom: 0px;
+}
+
+.dropdown-custom{
+  margin-top: 10px;
+  margin-right: 15px;
+}
+
+.dropdown-menu > li > a:hover {
+    background-color: #8FD1D8;
+    background-image: none;
+}
+
+.spacing{
+  word-spacing: -10px;
 }
 
