--- a/Rails/twit3/app/views/components/_create_tweet.html.erb
+++ b/Rails/twit3/app/views/components/_create_tweet.html.erb
@@ -1,14 +1,14 @@
-<div class="panel panel-danger">
+<div class="panel panel-info margin-bottom-zero">
   <div class="panel-heading">
-    <h2>Create a Tweet</h2>
+    <h3 class="panel-title">Create a Tweet</h3>
   </div>
   <div class="panel-body">
-    <p>
+   
     <%= form_for @post do |f| %>
       <%= f.text_area :content, class: 'form-control' %><br>
       <%= f.submit "Tweet!" , class: 'btn btn-primary' %>
       <%= f.submit "Upload Image!" , class: 'btn ' %>
     <% end %>
-    </p>
+    
   </div>
 </div>
