--- a/Rails/twit3/app/views/components/_sidebar_right.html.erb
+++ b/Rails/twit3/app/views/components/_sidebar_right.html.erb
@@ -1,6 +1,5 @@
 <% if current_user %>
     <div class="col-sm-3 ">
-    	<div class="nav-card ">
     		<div class="profile-cards">
     			<ul class="list-group", style="list-style:none" >
     				<li class="list-group-item">
@@ -9,10 +8,12 @@
 				    <li class="list-group-item">
 				      <b><%= link_to current_user.name, post_path(current_user) %></b>@<%= current_user.username %>
 				    </li>
-				    <li>
+				    <% if !current_user %>
+				    <li class="list-group-item">
 				      <p><%= render partial: '/components/follow_button', locals: {user: @user}%></p>
 				    </li>
-				    <li class="list-group-item"> 
+				    <% end %>
+				    <li class="list-group-item list-custom"> 
 				      <table class="table table-bordered table-condensed table-custom" >
 				      	<tr>
 				      		<td> Tweets </td>
@@ -28,14 +29,11 @@
 				    </li>
 			    </ul>
 			  </div>
-		  </div>
 
-	    <div class="nav-card">
 	     	<ul class="list-group">
 	     		<li class=" list-group-item btn btn-hover"><%= link_to 'Users', users_path%></li>
 	     		<li class=" list-group-item btn btn-hover "><%= link_to 'Posts', root_path %></li>
 	     		<li class=" list-group-item btn btn-hover"><%= link_to 'Images',users_picture_path %></li>
 	     	</ul>
-	    </div>
     </div>
   <% end %>
