--- a/Rails/twit3/app/views/users/show.html.erb
+++ b/Rails/twit3/app/views/users/show.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
   <% if current_user %>
     <div class="col-sm-3">
-      <div class="nav-card ">
         <div >
           <ul class="list-group", style= "list-style:none">
             <li class="list-group-item">
@@ -10,10 +9,12 @@
             <li class="list-group-item">
               <b><%= link_to @user.name, user_path(@user) %></b>@<%= @user.username %>
             </li>
-            <li class="list-group-items">
-              <p><%= render partial: '/components/follow_button', locals: {user: @user}%></p>
-            </li>
-            <li class="list-group-item"> 
+            <% if current_user.id!=@user.id %>
+              <li class="list-group-items">
+                <p><%= render partial: '/components/follow_button', locals: {user: @user}%></p>
+              </li>
+            <% end %>
+            <li class="list-group-item list-custom"> 
               <table class="table table-bordered table-condensed table-custom" >
                 <tr>
                   <td> Tweets </td>
@@ -29,41 +30,63 @@
             </li>
           </ul>
         </div>
-        </div>
     </div>
 
 <%######################################################## %>
 
-    <div class="col-sm-6">
-      <div class="body-card">
+    <div class="col-sm-8">
       <% if current_user.present? && current_user.id==@user.id%>
         <%= render '/components/create_tweet'%>
       <% end %>
-      <div class="panel panel-danger">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h3><%= @user.name %>'s Tweets</h3>
+          <h3 class="panel-title"><%= @user.name %>'s Tweets</h3>
         </div>
         <div>
           <ul class="list-group">
             <% @user.posts.each do |tweet| %>  
               <li class="list-group-item">
               <% if tweet.user %>
-                <b><%= link_to tweet.user.name, post_path(tweet.user) %></b>
-                <small>@<%= tweet.user.username %> 
+                <b><%= link_to @user.name, post_path(@user) %></b>
+                <small>@<%= @user.username %> 
                 <%= time_ago_in_words(tweet.created_at) %></small>
                 <p> <%= tweet.content %> </p>
-                <% if current_user.present? && tweet.user_id == current_user.id %>
-                  <%= link_to 'Delete', post_path(tweet.id),
-                   method: :delete,
-                   data: { confirm: 'Are you sure?' } %>
-                <%end%>
-                <%= link_to 'Retweet', post_path %> 
-              <% end %>
-            <% end %>
+
+                <div id="task-form-<%= tweet.id %>" class="hidden"></div>
+                  <% parent_tweet = tweet.parent %>
+                  <% if parent_tweet.present? %>
+                    <div class="tweet-card">
+                      <b><%= link_to parent_tweet.user.name, user_path(parent_tweet.user) %></b>
+                      <small>@<%= parent_tweet.user.username %> 
+                      <%= time_ago_in_words(parent_tweet.created_at) %></small>
+                      <p> <%= parent_tweet.content %> </p>
+                    </div>
+                  <% end %>
+
+                  <div class="btn-group" role="group">
+                    <% if current_user.present? && tweet.user_id == current_user.id %>
+                      <button type="button" class="btn btn-default">
+                        <%= link_to '', user_path(tweet.id),class: 'btn btn-danger btn-xs glyphicon glyphicon-trash',title: "Delete",
+                         method: :delete,
+                         data: { confirm: 'Are you sure?' } %>
+                      </button>
+                    <%end%>
+
+                    <button type="button" class="btn btn-default">
+                      <%= link_to '',new_retweet_path(retweet_id: tweet), id: 'task-#{tweet.id}',class: 'btn btn-success btn-xs glyphicon glyphicon-retweet',title: "Retweet", remote: true%> 
+                      <%= link_to tweet.retweets.count %>
+                    </button>
+
+                    <button type="button" class="btn btn-default">
+                      <%= link_to '',post_path(tweet),class: 'btn btn-default btn-xs glyphicon glyphicon-comment',title: "Comment"%>
+                      <%= link_to tweet.comments.count %>
+                    </button>
+                  </div>
+             <% end %>
             </li>
+            <% end %>
           </ul>
         </div>
-      </div>
       </div>
     </div>     
   <% end %>
