--- a/Rails/twit3/app/views/components/_create_comment.html.erb
+++ b/Rails/twit3/app/views/components/_create_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-danger">
+<!--<div class="panel panel-info"> -->
   <div class="panel-body">
     <p>
     <%= form_for([@post, @post.comments.build]) do |f| %>
@@ -8,4 +8,4 @@
     <% end %>
     </p>
   </div>
-</div>
+<!-- </div> -->
