--- a/Rails/twit3/app/views/components/_create_retweet.html.erb
+++ b/Rails/twit3/app/views/components/_create_retweet.html.erb
@@ -4,8 +4,8 @@
     <%= form_for(@retweet, url: retweets_path(retweet_id: @post.id), remote: true) do |f| %>
       <%= f.text_area :content, class: 'form-control' %><br>
       <%#= f.hidden_field :retweet_id, value: @post.id %>
+      <%#= f.file_field :avatar, title: "Upload Image"%><br>
       <%= f.submit "Retweet!" , class: 'btn btn-primary' %>
-      <%= f.submit "Upload Image!" , class: 'btn ' %>
     <% end %>
     </p>
   </div>
