--- a/Rails/twit3/app/views/components/_sidebar_right.html.erb
+++ b/Rails/twit3/app/views/components/_sidebar_right.html.erb
@@ -21,7 +21,7 @@
 				      		<td> Following </td>
 				      	</tr>
 				      	<tr>
-				      		<td class="info" ><%= current_user.posts.size %></td>
+				      		<td class="info" ><%= link_to current_user.posts.size, user_path(current_user) %></td>
 				      		<td class="info"><%= current_user.followers.count%></td>
 				      		<td class="info"><%= current_user.following.count%></td>
 				      	</tr>
@@ -33,7 +33,7 @@
 	     	<ul class="list-group">
 	     		<li class=" list-group-item btn btn-hover"><%= link_to 'Users', users_path%></li>
 	     		<li class=" list-group-item btn btn-hover "><%= link_to 'Posts', root_path %></li>
-	     		<li class=" list-group-item btn btn-hover"><%= link_to 'Images',users_picture_path %></li>
+	     		<li class=" list-group-item btn btn-hover"><%= link_to 'Images',posts_picture_path %></li>
 	     	</ul>
     </div>
   <% end %>
