--- a/Rails/twit3/app/views/layouts/application.html.erb
+++ b/Rails/twit3/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="col-md-12">
   	      <div class="col-md-6" >
-  	        <%=image_tag("twitter-logo3.png", height: '50', width: '50') %>
+  	        <%=link_to image_tag("twitter-logo3.png", height: '50', width: '50'), root_path %>
             <span><%= link_to "Twitter App", root_path, class:"header-title" %></span>
   	      </div>
 
@@ -22,7 +22,7 @@
         	<div class="col-md-5">
             <% if user_signed_in? %>
             <div class="dropdown pull-right">
-              <span class=" dropdown-toggle dropdown-custom" type="button" " data-toggle="dropdown"><%= image_tag(current_user.avatar.url(:thumb), class: "thumb-image round-image-50") %>
+              <span class=" dropdown-toggle dropdown-custom" type="button" " data-toggle="dropdown"><%=link_to image_tag(current_user.avatar.url(:thumb), class: "thumb-image round-image-50") %>
               </span>
                 <ul class="dropdown-menu">
     							<li><%= link_to  user_path(current_user),class:"header-text glyphicon glyphicon-user spacing" do %>
