--- a/Rails/twit3/app/views/posts/show.html.erb
+++ b/Rails/twit3/app/views/posts/show.html.erb
@@ -3,7 +3,9 @@
   <div class="col-sm-6">
       <div class="panel panel-info margin-bottom-zero">
         <div class="panel-heading ">
+        <% if @user.present?%>
           <h3 class="panel-title"><%= @user.name %>'s tweets</h3>
+
         </div>
         <div class="panel-body">
         <!--
@@ -14,43 +16,54 @@
                 <%= time_ago_in_words(@post.created_at) %>
               </small>
               <p><%= @post.content%></p>
-              <% if current_user.present? && @post.user_id == current_user.id %>
-              <%= link_to 'Delete', post_path(@post.id),
-              method: :delete,
-              data: {confirm: 'Are you sure?'} %>
-              <% end %>
-              <%= link_to 'Retweet', post_path%>
+              <p><%= link_to image_tag @post.avatar_url,class:"image-resizer" if @post.avatar? %></p>
+              <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default">
+                  <%= link_to '', post_path,class: 'btn btn-success btn-xs glyphicon glyphicon-retweet',title: "Retweet"%>
+                </button>
+                <% if current_user.present? && @post.user_id == current_user.id %>
+                  <button type="button" class="btn btn-default">
+                    <%= link_to '', post_path(@post.id),class: 'btn btn-danger btn-xs glyphicon glyphicon-trash',title: "Delete",
+                      method: :delete,
+                      data: {confirm: 'Are you sure?'} %>
+                  </button>
+                <% end %>
+              </div>
               <!--
             </li>
           </ul> -->
         </div>
+        <% end %>
       </div>
 
     <div class="panel panel-info">
       <div class="panel-heading">
           <h3 class="panel-title">Comments</h3>
       </div>
-      <div>
+      <div class="panel-body">
        <!-- <ul> -->
           <% @post.comments.each do |comment| %>
           <% @user = comment.user%>
             <% if @user %>
-            <!--  <li class="list-group-item list-style"> -->
-              
+          <!--<li class="list-group-item list-style"> -->
                 <b><%= link_to @user.name, user_path(@user) %></b>
                 <small>@<%= @user.username %> 
                 <%= time_ago_in_words(comment.created_at) %></small>
                 <p> <%= comment.body %> </p>
-                <%= link_to 'Delete', [comment.post, comment], 
-                method: :delete,
-                data: {confirm: 'Are you sure?'}%>
-              </li>
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default">
+                    <%= link_to '', [comment.post, comment], class: 'btn btn-danger btn-xs glyphicon glyphicon-trash',title: "Delete",
+                      method: :delete,
+                      data: {confirm: 'Are you sure?'}%>
+                  </button>
+                </div>
+            <!--  </li> -->
             <% end %>
           <% end %>
-          <li style="list-style:none">
+         <!-- <li style="list-style:none"> -->
             <%= render '/components/create_comment'%>
-          </li>
-        </ul>
+         <!-- </li> -->
+       <!-- </ul> -->
       </div>
     </div>
   </div>
