--- a/Rails/Eshopper/app/views/brands/show.html.erb
+++ b/Rails/Eshopper/app/views/brands/show.html.erb
@@ -9,7 +9,7 @@
 
       <div class="col-sm-9 padding-right">
         <%#= render '/components/features_items'%>
-        <%=  render partial:'/components/category_tab', locals:{navigation_list: @category.subcategories}%>
+        <%= render partial:'/components/category_tab', locals:{navigation_list: @brand.categories.where('parent_id is not null')}%>
         <%= render '/components/recommended_items'%>
       </div>
     </div>
@@ -36,5 +36,19 @@
 
 
 
-<%#= link_to 'Edit', edit_category_path(@category) %> |
-<%#= link_to 'Back', categories_path %>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+<%= link_to 'Edit', edit_brand_path(@brand) %> |
+<%= link_to 'Back', brands_path %>
+ -->
