--- a/Rails/Eshopper/app/views/components/_category_tab.html.erb
+++ b/Rails/Eshopper/app/views/components/_category_tab.html.erb
@@ -1,11 +1,12 @@
 <div class="category-tab"><!--category-tab-->
             <div class="col-sm-12">
               <ul class="nav nav-tabs">
-                <li class="active"><a href="#tshirt" data-toggle="tab">T-Shirt</a></li>
-                <li><a href="#blazers" data-toggle="tab">Blazers</a></li>
-                <li><a href="#sunglass" data-toggle="tab">Sunglass</a></li>
-                <li><a href="#kids" data-toggle="tab">Kids</a></li>
-                <li><a href="#poloshirt" data-toggle="tab">Polo shirt</a></li>
+              <%if @category.present? %>
+                <% navigation_list.each_with_index do |subcategory, i|%>
+                  <li class="<%='active' if i==0%>"><a href="#tshirt" data-toggle="tab">
+                  <%=subcategory.name.gsub(/:.+:/,'') %></a></li>
+                <% end %>
+              <% end %>
               </ul>
             </div>
             <div class="tab-content">
