--- a/Rails/Eshopper/app/views/components/_left_sidebar.html.erb
+++ b/Rails/Eshopper/app/views/components/_left_sidebar.html.erb
@@ -5,11 +5,11 @@
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordian" href="#<%= category.id %>">
+                    <a >
                     <% if category.brands.present? %>
-                      <span class="badge pull-right"><i class="fa fa-plus"></i></span>
+                      <span class="badge pull-right" data-toggle="collapse" data-parent="#accordian" href="#<%= category.id %>"><i class="fa fa-plus"></i></span>
                     <% end %>
-                    <%= category.name %>
+                    <%=link_to category.name, category_path(category) %>
                     </a>
                   </h4>
                 </div>
@@ -20,7 +20,7 @@
                     <div class="panel-body">
                       <ul>
                         <% brands.each do |brand|%>
-                          <li><a href="#"><%= brand.name%> </a></li>
+                          <li><%= link_to brand.name, brand_path(brand, category_id: category )%> </a></li>
                         <% end %>
                       </ul>
                     </div>
