--- a/Rails/Eshopper/app/views/components/_category_tab.html.erb
+++ b/Rails/Eshopper/app/views/components/_category_tab.html.erb
@@ -1,288 +1,40 @@
 <div class="category-tab"><!--category-tab-->
-            <div class="col-sm-12">
-              <ul class="nav nav-tabs">
-              <%if @category.present? %>
-                <% navigation_list.each_with_index do |subcategory, i|%>
-                  <li class="<%='active' if i==0%>"><a href="#tshirt" data-toggle="tab">
-                  <%=subcategory.name.gsub(/:.+:/,'') %></a></li>
-                <% end %>
-              <% end %>
-              </ul>
-            </div>
-            <div class="tab-content">
-              <div class="tab-pane fade active in" id="tshirt" >
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery1.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery2.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery3.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery4.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-              </div>
-              
-              <div class="tab-pane fade" id="blazers" >
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery4.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery3.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery2.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery1.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-              </div>
-              
-              <div class="tab-pane fade" id="sunglass" >
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery3.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery4.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery1.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery2.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-              </div>
-              
-              <div class="tab-pane fade" id="kids" >
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery1.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery2.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery3.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery4.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-              </div>
-              
-              <div class="tab-pane fade" id="poloshirt" >
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery2.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery4.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery3.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="product-image-wrapper">
-                    <div class="single-products">
-                      <div class="productinfo text-center">
-                        <img src="assets/home/gallery1.jpg" alt="" />
-                        <h2>$56</h2>
-                        <p>Easy Polo Black Edition</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </div>
-                      
-                    </div>
-                  </div>
+  <div class="col-sm-12">
+    <ul class="nav nav-tabs">
+    <%if @category.present? %>
+      <% navigation_list.order('name ASC').where(status: true).each_with_index do |subcategory, i|%>
+        <li class= <%= 'active' if params[:subcategory_id].to_s == subcategory.id.to_s %> >
+          <%= link_to subcategory.name.gsub(/:.+:/,''), category_path(id: @category.id, subcategory_id: subcategory.id) %>
+        </li>
+      <% end %>
+    <% end %>
+    </ul>
+  </div>
+
+  <div class="">
+  <%if @category.present? %>
+    <%# navigation_list.each_with_index do |subcategory, i|%>
+      <div class="" >
+      <% if @products.present? %>
+        <% @products.each do |product|%>
+          <div class="col-sm-3">
+            <div class="product-image-wrapper">
+              <div class="single-products">
+                <div class="productinfo text-center">
+                  <%if product.pictures.present?%>
+                    <%= image_tag product.pictures.first.image.url%>
+                  <% end %>
+                  <h2>Rs.<%= product.price%></h2>
+                  <p><%= product.name%></p>
+                  <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                 </div>
               </div>
             </div>
-          </div><!--/category-tab-->
+          </div>
+        <% end %> 
+        <% end %>
+      </div>
+    <%# end %>
+  <% end %>
+  </div>
+</div><!--/category-tab-->
