--- a/Rails/Eshopper/app/views/components/_left_sidebar.html.erb
+++ b/Rails/Eshopper/app/views/components/_left_sidebar.html.erb
@@ -14,13 +14,13 @@
                   </h4>
                 </div>
 
-                <% brands = category.brands%>
-                <% if category.brands.present? %>
-                  <div id="<%= category.id %>" class="panel-collapse collapse">
+                <% brands = category.brands.where(:status=> true)%>
+                <% if category.brands.sort.present? %>
+                  <div id="<%= category.id %>" class="panel-collapse collapse <%= 'in' if @category.present? && @category.id == category.id %>">
                     <div class="panel-body">
                       <ul>
                         <% brands.each do |brand|%>
-                          <li><%= link_to brand.name, brand_path(brand, category_id: category )%> </a></li>
+                          <li><%= link_to brand.name, category_brand_path(brand, category_id: category)%> </a></li>
                         <% end %>
                       </ul>
                     </div>
