--- a/Rails/Eshopper/app/views/components/_category_tab.html.erb
+++ b/Rails/Eshopper/app/views/components/_category_tab.html.erb
@@ -2,6 +2,9 @@
   <div class="col-sm-12">
     <ul class="nav nav-tabs">
     <%if @category.present? %>
+    <% navigation_list.each do |s|%>
+      <%s.name.gsub!(/:.+:/,'')%>
+    <% end %>
       <% navigation_list.order('name ASC').where(status: true).each_with_index do |subcategory, i|%>
         <li class= <%= 'active' if params[:subcategory_id].to_s == subcategory.id.to_s %> >
           <%= link_to subcategory.name.gsub(/:.+:/,''), category_path(id: @category.id, subcategory_id: subcategory.id) %>
@@ -15,23 +18,31 @@
   <%if @category.present? %>
     <%# navigation_list.each_with_index do |subcategory, i|%>
       <div class="" >
-      <% if @products.present? %>
-        <% @products.each do |product|%>
-          <div class="col-sm-3">
-            <div class="product-image-wrapper">
-              <div class="single-products">
-                <div class="productinfo text-center">
-                  <%if product.pictures.present?%>
-                    <%= image_tag product.pictures.first.image.url%>
-                  <% end %>
-                  <h2>Rs.<%= product.price%></h2>
-                  <p><%= product.name%></p>
-                  <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+        <% if @products.present? %>
+          <% @products.shuffle.each_slice(4) do |slice|%>
+            <% slice.each do |product|%>
+              <div class="col-sm-3">
+                <div class="product-image-wrapper">
+                  <div class="single-products">
+                    <div class="productinfo text-center">
+                      <%if product.pictures.present?%>
+                        <%= image_tag product.pictures.first.image.url, width:'184px', height:'245px'%>
+                      <% end %>
+                      <h2>&#8377; <%= product.price%></h2>
+                      <p class="product_name_height"><%= product.name%></p>
+                      <%= link_to   cart_path, class:'btn btn-default add-to-cart' do %>
+                      <i class="fa fa-shopping-cart"> Add to cart</i>
+                      <% end %>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
+            <% end %>
+          <% end %> 
+        <% else %>
+          <div>
+            <h2><center>Product not available</center></h2>
           </div>
-        <% end %> 
         <% end %>
       </div>
     <%# end %>
