--- a/Rails/Eshopper/app/views/components/_left_sidebar.html.erb
+++ b/Rails/Eshopper/app/views/components/_left_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="left-sidebar">
             <h2>Category</h2>
             <div class="panel-group category-products" id="accordian"><!--category-productsr-->
-            <% @categories.each do |category|%>
+            <% @categories.where(status: true).each do |category|%>
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
