--- a/Rails/Eshopper/app/views/categories/show.html.erb
+++ b/Rails/Eshopper/app/views/categories/show.html.erb
@@ -10,7 +10,7 @@
       <div class="col-sm-9 padding-right">
         <%#= render '/components/features_items'%>
         <%= render partial:'/components/category_tab', locals:{navigation_list: @category.subcategories}%>
-        <%= render '/components/recommended_items'%>
+        <%#= render '/components/recommended_items'%>
       </div>
     </div>
   </div>
