--- a/Rails/Eshopper/app/views/components/_category_tab.html.erb
+++ b/Rails/Eshopper/app/views/components/_category_tab.html.erb
@@ -19,7 +19,7 @@
     <%# navigation_list.each_with_index do |subcategory, i|%>
       <div class="" >
         <% if @products.present? %>
-          <% @products.shuffle.each_slice(4) do |slice|%>
+          <% @products.each_slice(4) do |slice|%>
             <% slice.each do |product|%>
               <div class="col-sm-3">
                 <div class="product-image-wrapper">
@@ -30,8 +30,21 @@
                       <% end %>
                       <h2>&#8377; <%= product.price%></h2>
                       <p class="product_name_height"><%= product.name%></p>
-                      <%= link_to   cart_path, class:'btn btn-default add-to-cart' do %>
-                      <i class="fa fa-shopping-cart"> Add to cart</i>
+                      <% unless OrderItem.pluck('product_id').include?(product.id)%>
+                        <%= form_for @order_item, remote: true do |f|%>
+                          <div class="input-group-btn">
+                            <%= f.hidden_field :product_id, value: product.id %>
+                            <%= f.hidden_field :quantity, value: 1 %>
+                            <%= f.submit "Add to Cart", class: "btn btn-default add-to-cart" %>
+                          </div>
+                          <%#= link_to   cart_path, class:'btn btn-default add-to-cart' do %>
+                          <!-- <i class="fa fa-shopping-cart"> Add to cart</i> -->
+                          <%# end %>
+                        <% end %>
+                      <% else %>
+                        <%= link_to carts_path, class: "btn btn-success add-to-cart" do %>
+                        <i class="fa fa-shopping-cart"> Go to cart</i>
+                          <% end %>
                       <% end %>
                     </div>
                   </div>
