--- a/Rails/Eshopper/app/views/components/_footer.html.erb
+++ b/Rails/Eshopper/app/views/components/_footer.html.erb
@@ -43,7 +43,7 @@
               <div class="video-gallery text-center">
                 <a href="#">
                   <div class="iframe-img">
-                    <img src="assets/home/iframe3.png" alt="" />
+                    <%= image_tag 'home/iframe3.png'%>
                   </div>
                   <div class="overlay-icon">
                     <i class="fa fa-play-circle-o"></i>
@@ -58,7 +58,7 @@
               <div class="video-gallery text-center">
                 <a href="#">
                   <div class="iframe-img">
-                    <img src="assets/home/iframe4.png" alt="" />
+                    <%= image_tag 'home/iframe4.png'%>
                   </div>
                   <div class="overlay-icon">
                     <i class="fa fa-play-circle-o"></i>
@@ -69,13 +69,13 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <!-- <div class="col-sm-3">
             <div class="address">
-              <img src="assets/home/map.png" alt="" />
+              <%#= image_tag 'home/iframe4.png'%>
               <p>505 S Atlantic Ave Virginia Beach, VA(Virginia)</p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     
