--- a/Rails/Eshopper/app/views/components/_header_middle.html.erb
+++ b/Rails/Eshopper/app/views/components/_header_middle.html.erb
@@ -6,7 +6,7 @@
               <%= link_to (image_tag 'home/logo.png'), root_url%>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             <div class=" pull-right">
               <%= form_tag  :method => 'get' do %>
               <%= text_field_tag :search, params[:search],class:'search_box form' %>
@@ -14,13 +14,16 @@
             <% end %>
             </div>
           </div>
-          <div class="col-sm-5">
+          <div class="col-sm-6">
             <div class="shop-menu pull-right">
               <ul class="nav navbar-nav">
                 <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
                 <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
                 <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                <li><%= link_to carts_path, class: "btn btn-success add-to-cart" do %>
+                      <i class="fa fa-shopping-cart">Cart<%= "#{current_order.order_items.size}" %></i>
+                    <% end %>
+                </li>
                 <% unless user_signed_in? %>
                 <li><%= link_to new_user_session_path do %><i class="fa fa-lock"></i> Login
                 <% end %>
