--- a/Rails/Eshopper/app/views/components/_slider.html.erb
+++ b/Rails/Eshopper/app/views/components/_slider.html.erb
@@ -14,7 +14,7 @@
               <div class="item <%= ('active' if i==0) %>">
                   <div class="col-sm-6">
                     <h1><%= banner.title %></h1>
-                    <h2>Free E-Commerce Template</h2>
+                    <!-- <h2>Free E-Commerce Template</h2> -->
                     <p><%= banner.description%> </p>
                     <button type="button" class="btn btn-default get">Get it now</button>
                   </div>
