--- a/Rails/Eshopper3/app/views/components/_header_middle.html.erb
+++ b/Rails/Eshopper3/app/views/components/_header_middle.html.erb
@@ -19,11 +19,11 @@
               <ul class="nav navbar-nav">
                 <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
                 <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
-                <li><a href="#"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                <li><%= link_to cart_items_path, class: "btn btn-success add-to-cart" do %>
+                <!-- <li><a href="#"><i class="fa fa-crosshairs"></i> Checkout</a></li> -->
+                <li><%= link_to cart_items_path, class: "" do %>
                       <i class="fa fa-shopping-cart"> Cart
                         <% if @cart_items.present? %>
-                          (<%= @cart_items.count%>)
+                          <span id="cart_counts">(<%= @cart_items.count%>)</span>
                         <% end %>
                       </i>
                     <% end %>
