--- a/Rails/Eshopper3/app/views/cart_items/index.html.erb
+++ b/Rails/Eshopper3/app/views/cart_items/index.html.erb
@@ -33,7 +33,7 @@
         
           <tbody>
             <% @cart_items.each do |cart_item|%>
-              <tr>
+              <tr id="<%=cart_item.id%>">
                 <td class="cart_product">
                   <%= image_tag cart_item.product.pictures.first.image.url, width:'100px', height:'100px'%>
                 </td>
@@ -62,7 +62,7 @@
                   <p id="cart_item_total_<%= cart_item.id %>" class="cart_total_price">&#8377;<%= cart_item.total%></p>
                 </td>
                 <td class="cart_delete">
-                  <%= link_to cart_item, { data: { confirm: "Are you sure you wish to delete the product '#{cart_item.product.name}' from your cart?" }, method: :delete, class: "cart_quantity_delete" } do %>
+                  <%= link_to cart_item, { data: { confirm: "Are you sure you wish to delete the product '#{cart_item.product.name}' from your cart?" }, method: :delete,remote: true,  class: "cart_quantity_delete", title: 'remove' } do %>
                     <i class="fa fa-times"></i>
                   <% end %>
                 </td>
