--- a/Rails/Eshopper3/app/views/cart_items/index.html.erb
+++ b/Rails/Eshopper3/app/views/cart_items/index.html.erb
@@ -47,12 +47,10 @@
                 <td class="cart_quantity">
                   <div class="cart_quantity_button">
                     <%= link_to '+', cart_item_path(cart_item, increase: 'increase'), method: :put, class: 'cart_quantity_up', remote:true %>
-                    <%= form_for cart_item, method: :put,class:'form_class',  remote: true do |f| %>
+                    <%= form_for cart_item, method: :put,class:'form_class', remote: true do |f| %>
                       <%#= f.hidden_field :cart_update, value: 'cart_update'%>
-                      <%= f.text_field :quantity, size: 2, class:"cart_quantity_input", id: "cart-item-count-"+ cart_item.id.to_s ,onchange: "this.form.submit()"  %>
-                      <%#= f.text_field :quantity, cart_item.quantity,  class:"cart_quantity_input", id: "cart-item-count-"+ cart_item.id.to_s , size: 2 %>
+                      <%= f.text_field :quantity, size: 2, class:"cart_quantity_input", id: "cart-item-count-"+ cart_item.id.to_s ,:onchange=> " $(this.form).submit();"  %>
                     <% end %>
-                      <!-- <input id="cart-item-count-<%= cart_item.id%>" class="cart_quantity_input" type="text" name="quantity" value="<%= cart_item.quantity%>" autocomplete="off" size="2"> -->
                       <%= link_to '-', cart_item_path(cart_item, decrease: 'decrease'), method: :put, class: 'cart_quantity_down', remote:true %>
                   </div>
                 </td>
