--- a/Rails/Eshopper3/app/views/components/_brand_category_tab.html.erb
+++ b/Rails/Eshopper3/app/views/components/_brand_category_tab.html.erb
@@ -3,10 +3,8 @@
     <ul class="nav nav-tabs">
     <%if @category.present? %>
       <% navigation_list.order('name ASC').where(status: true).each_with_index do |subcategory, i|%>
-        <% klass = '' %>
-        <% klass = 'active' if params[:subcategory_id].to_s == subcategory.id.to_s  %>
         <li class= <%= 'active' if params[:subcategory_id].to_s == subcategory.id.to_s %> >
-          <%= link_to subcategory.name.gsub(/:.+:/,''), category_brand_path(subcategory_id: subcategory.id), class: klass %>
+          <%= link_to subcategory.name.gsub(/:.+:/,''), category_brand_path(subcategory_id: subcategory.id) %>
         </li>
       <% end %>
     <% end %>
@@ -18,17 +16,22 @@
     <%# navigation_list.each_with_index do |subcategory, i|%>
       <div class="col-sm-12" >
         <% if @products.present? %>
-          <% @products.shuffle.each do |product|%>
+          <% @products.each do |product|%>
             <div class="col-sm-3">
-              <div class="product-image-wrapper">
+              <div class="product-image-wrapper product_style">
                 <div class="single-products">
                   <div class="productinfo text-center">
-                    <%if product.pictures.present?%>
-                      <%= image_tag product.pictures.first.image.url, width:'184px', height:'245px'%>
+                    <%= link_to product_path(product) do %>
+                      <%if product.pictures.present?%>
+                        <%= image_tag product.pictures.first.image.url, width:'184px', height:'245px'%>
+                      <% end %>
+                      <h2>&#8377; <%= product.price%></h2>
+                      <p class="product_name_height"><%= product.name%></p>
                     <% end %>
-                    <h2>&#8377; <%= product.price%></h2>
-                    <p class="product_name_height"><%= product.name%></p>
-                    <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+
+                    <div id="product-cart-status-<%= product.id%>">
+                      <%= render partial:'/cart_items/product_cart_status', locals:{product: product}%>
+                    </div>
                   </div>
                 </div>
               </div>
