--- a/Rails/Eshopper3/app/views/components/_left_sidebar.html.erb
+++ b/Rails/Eshopper3/app/views/components/_left_sidebar.html.erb
@@ -14,11 +14,11 @@
 
       <% brands = category.brands.where(:status=> true)%>
       <% if category.brands.sort.present? %>
-        <div id="<%= category.id %>" class="panel-collapse collapse <%= 'in' if @category.present? && @category.id == category.id %> ">
+        <div id="<%= category.id %>" class="panel-collapse collapse <%= 'in' if @category.present? && @category.id == category.id || @category.parent_id == category.id %> ">
           <div class="panel-body">
-            <ul>
+            <ul id="brand-navigation">
               <% brands.each do |brand|%>
-                <li><%= link_to brand.name, category_brand_path(brand, category_id: category)%> </a></li>
+                <li class="<%= 'brand_highlight' if current_page?category_brand_path(brand, category_id: category) %>"><%= link_to brand.name, category_brand_path(brand, category_id: category), class: 'brand_link'%> </a></li>
               <% end %>
             </ul>
           </div>
