--- a/Rails/Eshopper3/app/views/cart_items/destroy.js.erb
+++ b/Rails/Eshopper3/app/views/cart_items/destroy.js.erb
@@ -1,4 +1,9 @@
-$('#<%= @cart_item.id%>').fadeOut()
+<% if @cart_items.count==0 %>
+  $('#complete-cart-items').fadeOut()
+  $('.collapse').show()
+<% else %>
+  $('#<%= @cart_item.id%>').hide()
+<% end %>
 $('#cart_counts').html('('+<%= @cart_items.count%>+')')
 $('#cart_item_total_'+<%= @cart_item.id %>).html('&#8377;'+ <%= @cart_item.total %>.toFixed(1))
 $('#vat').html('&#8377; <%= @vat%>')
